--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,18 +1,8 @@
 log4j.rootLogger = WARN
 
-log4j.logger.com.jftt.odf = DEBUG, stdout, infoLog
-log4j.logger.com.jftt.odf.is.socket = ERROR, infoLog
-
 log4j.logger.org.springframework = WARN, stdout, infoLog
-
 log4j.logger.net.sf.json = ERROR, infoLog
-
 log4j.logger.org.directwebremoting = ERROR, infoLog
-
-#Struts2 Action
-log4j.logger.com.opensymphony.xwork2=WARN,stdout
-log4j.logger.org.apache.struts2=WARN,stdout
-log4j.logger.com.jftt.odf.web.interceptors=DEBUG
 
 ###显示SQL语句部分                                                     
 log4j.logger.org.mybatis.caches.ehcache=WARN, infoLog
@@ -24,7 +14,6 @@ log4j.logger.java.sql.PreparedStatement=DEBUG, stdout, infoLog
 #stdout configure
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
-#log4j.appender.stdout.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss} %p %l %m%n
 log4j.appender.stdout.layout.ConversionPattern = %d{HH\:mm\:ss}(%F\:%L)%M\:\t\t %m %x %n
 
 #logfile configure
@@ -32,6 +21,6 @@ log4j.appender.infoLog = org.apache.log4j.RollingFileAppender
 log4j.appender.infoLog.MaxFileSize = 20mB
 log4j.appender.infoLog.MaxBackupIndex = 500
 log4j.appender.infoLog.file = ../logs/spring.log
-
+log4j.appender.infoLog.Encoding=UTF-8
 log4j.appender.infoLog.layout = org.apache.log4j.PatternLayout
 log4j.appender.infoLog.layout.ConversionPattern =%d{yyyy-MM-dd HH:mm:ss} %p %l %m%n
