--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,17 +36,17 @@
     <param-value>classpath:applicationContext.xml</param-value>
   </context-param>
   <servlet>
-    <servlet-name>mvc</servlet-name>
+    <servlet-name>springmvc</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>classpath:mvc.xml</param-value>
+      <param-value>classpath:SpringMVC.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
-    <servlet-name>mvc</servlet-name>
-    <url-pattern>*.action</url-pattern>
+    <servlet-name>springmvc</servlet-name>
+    <url-pattern>*.do</url-pattern>
   </servlet-mapping>
 	<session-config>
 		<session-timeout>30</session-timeout>
